tests/run/error_mut_let_arg.out
tests/run/error_mut_let_arg.em:12:5: error: cannot pass an immutable binding to a 'mut' parameter; declare it 'var' (or pass by 'move' to transfer ownership)
